--- a/booking.html
+++ b/booking.html
@@ -14,16 +14,16 @@
       <h2 class="logo_text">Eventor</h2>
       <ul class="navmenu">
         <li class="navitem">
-          <a href="booking.html" class="navlink">Home</a>
+          <a href="#" class="navlink">Home</a>
         </li>
         <li class="navitem">
-          <a href="" class="navlink">Book</a>
+          <a href="booking.html" class="navlink">Book</a>
         </li>
         <li class="navitem">
-          <a href="" class="navlink">Organize</a>
+          <a href="#" class="navlink">Organize</a>
         </li>
         <li class="navitem">
-          <a href="" class="navlink">Sponsor</a>
+          <a href="#" class="navlink">Sponsor</a>
         </li>
       </ul>
     </nav>
