--- a/sponsor.html
+++ b/sponsor.html
@@ -44,7 +44,7 @@
 
                 <div class="event">
                     <h3> IT Batch 2020 GRADUATION </h3>
-                    <p> Location: CAIRO</p>
+                    <p> Location: CAIRO HALL</p>
                     <p> Date: 6/AUGUST/2025</p>
                     <p> Sponsorship Tiers: Gold, Silver , bronze</p>
 
@@ -58,16 +58,16 @@
             <div class="event-list">
                 <div class="event">
                     <h3>Presedent Speach</h3>
-                    <p> Location: </p>
+                    <p> Location: Green Yard</p>
                     <p> Date: 12/JULY/2025</p>
                     <p> Sponsorship Tiers: Gold, Silver, Bronze</p>
 
                 </div>
 
                 <div class="event">
-                    <h3> IT Batch 2020 GRADUATION </h3>
-                    <p> Location: CAIRO</p>
-                    <p> Date: 6/AUGUST/2025</p>
+                    <h3> KP Brand Lanch </h3>
+                    <p> Location: Frendship Hall</p>
+                    <p> Date: 1/September/2025</p>
                     <p> Sponsorship Tiers: Gold, Silver , bronze</p>
 
                 </div>
