--- a/sponsor.html
+++ b/sponsor.html
@@ -58,15 +58,15 @@
             <div class="event-list">
                 <div class="event">
                     <h3>Presedent Speach</h3>
-                    <p> Location: </p>
+                    <p> Location: Green Yard </p>
                     <p> Date: 12/JULY/2025</p>
                     <p> Sponsorship Tiers: Gold, Silver, Bronze</p>
 
                 </div>
 
                 <div class="event">
-                    <h3> IT Batch 2020 GRADUATION </h3>
-                    <p> Location: CAIRO</p>
+                    <h3>WWE RAW</h3>
+                    <p> Location: TENNIS CLUB</p>
                     <p> Date: 6/AUGUST/2025</p>
                     <p> Sponsorship Tiers: Gold, Silver , bronze</p>
 
