--- a/sponsor.html
+++ b/sponsor.html
@@ -80,7 +80,7 @@
 
     </div>
 
-    <form>
+    <form action="sponsor_event.php" method="POST">
         <h1>Choose an Event</h1>
         <input type="text" placeholder="Company Name" required>
         <input type="text" placeholder="Email" required>
