--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
         <div class="welcome">
             <h1>Welcome to Eventor Family</h1>
         </div>
-        <form class="loginform">
+        <form class="loginform" action="login.php" method="POST">
             <h2>Log in</h2>
 
             <input type="text" id="email" name="email" placeholder="Enter your email" required>
