--- a/payment.html
+++ b/payment.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="maintext">
-        <h1>Several Optionts to Pay </h1>
+        <h1>Payment Section</h1>
         <p>You can pay using Fawry or Bankak</p>
     </div>
     <div class="logo-box">
@@ -19,13 +19,11 @@
     </div>
     <div class="container">
         <h1>Make a Payment</h1>
-        <form id="payment-form" action="handle_payment.php" method="POST">
-            <label for="ticket-type">Ticket Type:</label>
-            <select id="ticket-type" name="ticket_type_id" required>
-                <option value="1">Early Bird</option>
-                <option value="2">Standard</option>
-                <option value="2">VIP</option>
-            </select>
+
+        <form id="payment-form" action="payment.php" method="POST">
+            <label for="fname"> Your Name:</label>
+            <input type="text" id="fname" name="fname" required>
+
 
             <label for="payment-method">Payment Method:</label>
             <select id="payment-method" name="payment_method" required>
@@ -34,7 +32,7 @@
             </select>
 
             <label for="amount">Amount:</label>
-            <input type="number" id="amount" name="amount" required>
+            <input type="number" min="0" id="amount" name="amount" required>
 
             <button type="submit">Pay</button>
         </form>
