--- a/seats.html
+++ b/seats.html
@@ -25,14 +25,14 @@
 	<section id="resform">
 		<h2>Complete This Form To Confirm Your Reservation</h2>
 		<p id="selectedseats">You have selected X Seats</p>
-		<form id="confirmres">
+		<form id="confirmres" action="book_ticket.php" method="POST">
 			<label for="fname">First Name</label>
 			<input type="text" name="fname" id="fname" placeholder="Bob" required>
 			<label for="lname">Last Name</label>
 			<input type="text" name="lname" id="lname" placeholder="Jones" required>
 			<input type="submit" name="send" id="confirmbtn" value="Confirm Reservation">
-			<p>Or <a href="#" id="cancel">cancel</a> and choose different seats</p>
 		</form>
+
 	</section>
 	<script src="myscript.js"></script>
 </body>
