added photos to sponsor page

--- a/sponsor.html
+++ b/sponsor.html
@@ -35,6 +35,7 @@
 
             <div class="event-list">
                 <div class="event">
+                    <img class="event-img" src="images/classico.jpg">
                     <h3>AL HILAL VS AL MERRICK</h3>
                     <p> Location: KHARTOUM STADIUM</p>
                     <p> Date: 12/JULY/2025</p>
@@ -43,6 +44,7 @@
                 </div>
 
                 <div class="event">
+                    <img class="event-img" src="images/grad.jpeg">
                     <h3> IT Batch 2020 GRADUATION </h3>
                     <p> Location: CAIRO</p>
                     <p> Date: 6/AUGUST/2025</p>
@@ -57,6 +59,7 @@
 
             <div class="event-list">
                 <div class="event">
+                    <img class="event-img" src="images/burhan.jpg">
                     <h3>Presedent Speach</h3>
                     <p> Location: Green Yard </p>
                     <p> Date: 12/JULY/2025</p>
@@ -65,6 +68,7 @@
                 </div>
 
                 <div class="event">
+                    <img class="event-img" src="images/raw.jpg">
                     <h3>WWE RAW</h3>
                     <p> Location: TENNIS CLUB</p>
                     <p> Date: 6/AUGUST/2025</p>
@@ -80,7 +84,7 @@
 
     </div>
 
- <form action="sponsor_event.php" method="POST">
+    <form action="sponsor_event.php" method="POST">
         <h1>Choose an Event</h1>
         <input type="text" name="company_name" placeholder="Company Name" required>
         <input type="email" name="email" placeholder="Email" required>
@@ -95,7 +99,7 @@
 
         <button type="submit">CONFIRM SPONSORSHIP</button>
     </form>
-      
+
 
 
 
